# nimbus_sandbox

./: README.md
nimbus_action_queue/: CMakeLists.txt  package.xml
nimbus_action_queue/include/nimbus_action_queue/: NimbusActionQueue.h
nimbus_action_queue/src/: NimbusActionQueue.cpp
nimbus_bringup_sandbox/: CMakeLists.txt  package.xml
nimbus_bringup_sandbox/config/camera_info/: depth_1401210033.yaml  rgb_1401210033.yaml
nimbus_bringup_sandbox/config/camera_info/000739251047/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
nimbus_bringup_sandbox/config/camera_info/004063151147/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
nimbus_bringup_sandbox/config/segmentation/: zones.yaml  zones_side.yaml
nimbus_bringup_sandbox/config/self_filter/: filter_params.yaml  filter_params_full.yaml
nimbus_bringup_sandbox/launch/: markers.launch  nimbus_bringup_crowd_interface.launch  nimbus_bringup_web.launch  nimbus_grasp_collection.launch  nimbus_grasp_collection_frontend.launch  nimbus_recognition.launch  self_filter.launch
nimbus_bringup_sandbox/rviz/: nimbus_grasp_collection_frontend.rviz
nimbus_interactive_manipulation/: CMakeLists.txt  package.xml
nimbus_interactive_manipulation/action/: SpecifiedGrasp.action
nimbus_interactive_manipulation/include/nimbus_interactive_manipulation/: nimbus6dofPlanning.h  nimbus6dofVis.h  nimbusNavidget.h  nimbusObjectViewer.h  nimbus_interactive_manipulation.h
nimbus_interactive_manipulation/launch/: im_frontend.launch
nimbus_interactive_manipulation/rviz/: im_frontend.rviz
nimbus_interactive_manipulation/src/: nimbus6dofPlanning.cpp  nimbus6dofVis.cpp  nimbusNavidget.cpp  nimbusObjectViewer.cpp  nimbus_interactive_manipulation.cpp
nimbus_perception/: CMakeLists.txt  package.xml
nimbus_perception/config/: dataset list.txt  model.pkl  model.py  training_data.yaml
nimbus_perception/config/backup/old data/: objects.csv
nimbus_perception/config/backup/old data/backup/: objects.csv
nimbus_perception/config/backup/old data/ignore parts/: model.pkl
nimbus_perception/config/backup/old data/others/: objects-alternate.csv  objects-ignore-parts.csv
nimbus_perception/config/backup/old data/raw data/: objects.csv
nimbus_perception/config/containers/: dataset_containers.csv  model.pkl
nimbus_perception/config/ignore parts/: objects.csv
nimbus_perception/config/others/: objects.csv
nimbus_perception/config/raw data/: model.pkl
nimbus_perception/config/subset 1/: dataset_ss1.csv  model.pkl
nimbus_perception/config/subset 2/: dataset_ss2.csv  model.pkl
nimbus_perception/include/nimbus_perception/: ObjectLabeler.h  ObjectRecognitionListener.h  SimpleDataCollector.h  SimpleRecognition.h  SimpleRecognitionTester.h
nimbus_perception/launch/: classify_bag.launch  classify_test.launch  feature_based_segmentation.launch
nimbus_perception/msg/: Classify.msg  TrackedObject.msg  TrackedObjectList.msg
nimbus_perception/scripts/: classify_client.py  classify_server.py  segment_server.py
nimbus_perception/src/: ObjectLabeler.cpp  ObjectRecognitionListener.cpp  SimpleDataCollector.cpp  SimpleRecognition.cpp  SimpleRecognitionTester.cpp
nimbus_perception/srv/: Classify.srv  ClassifyInstance.srv  TrackedObject.srv
nimbus_web_interfaces/: CMakeLists.txt  package.xml
nimbus_web_interfaces/launch/: nimbus_crowd_interface.launch  web_services.launch  web_services1.launch
nimbus_world_model/: CMakeLists.txt  package.xml
nimbus_world_model/include/nimbus_world_model/: WorldObjectParticle.h  world_model.h
nimbus_world_model/msg/: WorldModel.msg  WorldObject.msg
nimbus_world_model/src/: WorldObjectParticle.cpp  world_model.cpp
robot_self_filter/src/: self_filter.cpp
