<?xml version="1.0"?>
<package>
  <name>nimbus_action_queue</name>
  <version>0.0.1</version>
  <description>Sequential action execution for Nimbus, the RAIL lab's tabletop robot arm.</description>

  <maintainer email="dekent@gatech.edu">David Kent</maintainer>
  <author email="dekent@gatech.edu">David Kent</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nimbus_action_queue</url>
  <url type="bugtracker">https://github.com/GT-RAIL/nimbus_action_queue/issues</url>
  <url type="repository">https://github.com/GT-RAIL/nimbus_action_queue</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rail_action_queue_msgs</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rail_action_queue_msgs</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  
</package>
