<?xml version="1.0"?>
<package>
  <name>nimbus_bringup</name>
  <version>0.0.1</version>
  <description>Nimbus bringup launch scripts</description>

  <maintainer email="dekent@gatech.edu">David Kent</maintainer>
  <author email="dekent@gatech.edu">David Kent</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nimbus_bringup</url>
  <url type="bugtracker">https://github.com/GT-RAIL/nimbus_bringup/issues</url>
  <url type="repository">https://github.com/GT-RAIL/nimbus_bringup</url>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ROBOT MODEL -->
  <run_depend>nimbus_description</run_depend>
  
  <!-- SENSORS -->
  <run_depend>kinect2_bridge</run_depend>

  <!-- JACO -->
  <run_depend>wpi_jaco_wrapper</run_depend>
  
  <!-- NIMBUS -->
  <run_depend>nimbus_interactive_manipulation</run_depend>
  <run_depend>nimbus_moveit_config</run_depend>

  <!-- VISION -->
  <run_depend>rail_segmentation</run_depend>
  <run_depend>rail_recognition</run_depend>
</package>
