<?xml version="1.0"?>
<package>
  <name>nimbus_interactive_manipulation</name>
  <version>0.0.32</version>
  <description>Interactive Manipulation for Nimbus, the RAIL lab's tabletop robot arm</description>

  <author email="dekent@gatech.edu">David Kent</author>
  <maintainer email="dekent@gatech.edu">David Kent</maintainer>

  <url type="website">http://ros.org/wiki/nimbus_interactive_manipulation</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/nimbus_interactive_manipulation/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/nimbus_interactive_manipulation</url>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rail_pick_and_place_msgs</build_depend>
  <build_depend>rail_segmentation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rail_pick_and_place_msgs</run_depend>
  <run_depend>rail_segmentation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
