<?xml version="1.0"?>
<package>
  <name>nimbus_perception</name>
  <version>0.0.1</version>
  <description>Perception system for Nimbus, the RAIL lab's tabletop robot arm</description>

  <author email="dekent@gatech.edu">David Kent</author>
  <maintainer email="dekent@gatech.edu">David Kent</maintainer>

  <url type="website">http://ros.org/wiki/nimbus_bot</url>
  <url type="bugtracker">https://github.com/GT-RAIL/nimbus_bot/issues</url>
  <url type="repository">https://github.com/GT-RAIL/nimbus_bot</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>rospy</run_depend>
</package>