<?xml version="1.0"?>
<package>
  <name>nimbus_web_interfaces</name>
  <version>0.0.0</version>
  <description>Launch scripts for Nimbus' web interfaces</description>

  <maintainer email="dekent@gatech.edu">David Kent</maintainer>
  <author email="dekent@gatech.edu">David Kent</author>

  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROBOT MODEL -->
  <run_depend>mjpeg_server</run_depend>
  <run_depend>rail_user_queue_manager</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>tf2_web_republisher</run_depend>
</package>
