<?xml version="1.0"?>
<package>
  <name>nimbus_world_model</name>
  <version>0.0.1</version>
  <description>World model for the Nimbus world, containing tracked object locations and some relative information.</description>

  <author email="dekent@gatech.edu">David Kent</author>
  <maintainer email="dekent@gatech.edu">David Kent</maintainer>

  <url type="website">http://ros.org/wiki/nimbus_world_model</url>
  <url type="bugtracker">https://github.com/GT-RAIL/nimbus_world_model/issues</url>
  <url type="repository">https://github.com/GT-RAIL/nimbus_world_model</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
</package>
